fix slash alignment in IE
git-svn-id: https://repos.nextthought.com/svn/nti-svn/NextThoughtWebApp/trunk@20900 3dfb626b-079f-4ab1-a9f6-4654e5377508

--- a/src/main/resources/scss/_content-nav.scss
+++ b/src/main/resources/scss/_content-nav.scss
@@ -24,6 +24,8 @@
 		}
 
 		span:not(.part){
+			.x-ie &,
+			.x-ie10 &,
 			.x-gecko & {
 				top: -25px;
 				position: relative;
@@ -50,6 +52,8 @@
 				overflow: visible;
 				cursor: default;
 				margin-left: 0.4em;
+				.x-ie &,
+				.x-ie10 &,
 				.x-gecko & {
 					top: -25px;
 				}
